완치자 현황으로 이름 변경

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">한국 완치자</div>
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">완치자 현황</div>
                       <!-- 완치자(세계 완치자도 포함) -->
                       <h4 class="small font-weight-bold">한국(완치자 <span id="한국완치자_인원"></span>명/확진자 <span
                           id="한국확진자_완치자카드"></span>명)<span class="float-right"><span id="한국완치자_확률"></span>%</span></h4>
