--- a/index.html
+++ b/index.html
@@ -1110,31 +1110,28 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <p>
-                    업데이트가 필요하거나, 추가 기능, 다국어 번역이 필요하신 경우 메일로 연락주세요. paul-lab@naver.com 입니다.(번역의 경우 직접 도움을 주셔야 합니다.)
+                  <ul>
+                    <li>
+                      <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
+                      <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 및 제주도청의 데이터를 근거하여 매일 업데이트합니다.
+                    </li>
+                    <li>
+                      <a href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank">리포트 바로가기</a>
+                    </li>
+                    <li>
+                      GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다.
+                    </li>
+                    <li>
+                      업데이트가 필요하거나, 추가 기능, 다국어 번역이 필요하신 경우 메일로 연락주세요. <a href="mailto:paul-lab@naver.com">paul-lab@naver.com</a> 입니다. (번역의 경우 직접 도움을 주셔야 합니다.)
+                    </li>
+                    <li>
+                      <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API를 무상 지원합니다.
+                    </li>
+                  </ul>
+                  <p class="text-right">
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a> | 
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/fc332cf039fd4f61b38a80bc2fc8acb9">업데이트 히스토리</a>
                   </p>
-                  <p>
-                    국내 맵은 감염자수 30명이 넘으면 별도로 만들도록 하겠습니다.
-                  </p>
-                  <p>
-                    정보 업데이트는 <a target="_blank" href="http://news.kbs.co.kr/common/main.html">KBS</a>가 빠릅니다. 제보 감사합니다.
-                  </p>
-                  <p>
-                    <a target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a>
-                  </p>
-                  <p>
-                    <a target="_blank" href="https://www.notion.so/fc332cf039fd4f61b38a80bc2fc8acb9">업데이트 히스토리</a>
-                  </p>
-                  <p>* <a href="http://www.cdc.go.kr/linkCheck.es?mid=a21111050500" target="_blank">질병관리본부</a>,
-                    <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 제주도청의 DATA 근거, 일일 업데이트<br>
-                    <a href="http://www.xn--now-po7lf48dlsm0ya109f.kr/infect/occurrence_list.do" target="_blank">리포트 바로가기</a>
-                  </p>
-                  <p>* GDG(google developers group) 등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다.<br>
-                    <a target="_blank" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a><br>
-                    <a target="_blank" href="https://www.notion.so/fc332cf039fd4f61b38a80bc2fc8acb9">업데이트 히스토리</a>
-                  </p>
-                  <p>* <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API 를 무상
-                    지원합니다.</p>
                 </div>
               </div>
             </div>
