--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                           <th>신종인플루엔자 A(H1N1)</th>
                           <th>중동호흡기 중후군(MERS)</th>
                           <th>중증급성호흡기증후군(SARS)</th>
-                          <th>신종 코로나</th>
+                          <th>신종 코로나(COVID-19)</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -486,15 +486,14 @@
                     </table>
                   </div>
                   <p>
-                    ※20년 2월 10일 기준<br>
+                    ※ 20년 2월 10일 기준<br>
                     기초감염재생산수: 한 사람의 감염자가 몇 명을 전염시킬 수 있는지를 나타낸 값<br>
                     비말감염: 감염자의 침, 콧물 등 체액이 다른 사람의 입이나 코로 들어가 감염이 이루지는 것<br>
-                    출처: 질병관리본부, 세계보건기구(WHO), 우측 상단상세에 링크참고
+                    출처: 질병관리본부, 세계보건기구(WHO). 우측 하단 링크 참고.
                   </p>
                 </div>
               </div>
             </div>
-
           </div>
           <br>
 
@@ -555,7 +554,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="chart-area">
-                    <p>* 19년 일별 평균<a href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
+                    <p>* 19년 일별 평균 <a href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
                     <canvas id="myAreaChart_three"></canvas>
                   </div>
                 </div>
