시나리오별 예측 카드 삽입

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <div class="row">
 
             <!-- 안전수칙 -->
-            <div class="col-xl-5 col-lg-5">
+            <div class="col-xl-4 col-lg-4">
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -398,7 +398,7 @@
             </div>
 
             <!-- 통계치 -->
-            <div class="col-xl-7 col-lg-7">
+            <div class="col-xl-5 col-lg-5">
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -494,6 +494,38 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-xl-3 col-lg-3">
+                          <div class="card shadow mb-12">
+                            <!-- Card Header - Dropdown -->
+                            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                              <h6 class="m-0 font-weight-bold text-danger">시나리오별 상황예측</h6>
+                              <div class="dropdown no-arrow">
+                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                                  <div class="dropdown-header">상세</div>
+                                  <a class="dropdown-item" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">WHO
+                                    상세논문보기</a>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                              <img src="lancet.jpg" alt="Nowcasting and forecasting the potential domestic and
+            international spread of the 2019-nCoV outbreak originating
+            in Wuhan, China: a modelling study" class="img-fluid">
+                              <p style="margin-top:0.5rem;">
+                                ※ 출처 : lancet 논문 '<a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">Nowcasting and forecasting the potential domestic and
+            international spread of the 2019-nCoV outbreak originating
+            in Wuhan, China: a modelling study</a>'<br>
+                                ※ 1월 25일까지의 감염력이 유지된다는 전제 하 그래프 입니다. 이를 바탕으로 다양한 시나리오별 예측값을 시각화할 예정이며, 차후 비슷한 사례가 발생되었을 경우에도 사용할 수 있도록 모든 소스를 오픈하도록 하겠습니다.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+
           </div>
           <br>
 
@@ -1116,7 +1148,7 @@
                     </li>
                   </ul>
                   <p class="text-right">
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a> | 
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a> |
                     <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/fc332cf039fd4f61b38a80bc2fc8acb9">업데이트 히스토리</a>
                   </p>
                 </div>
