Reorganize image assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="코로나 바이러스 현황판">
 	<meta name="description" content="질병관리본부의 DATA 근거하여, 신종 코로나 바이러스 감염증에 대한 정보를 신속하게 전달하기 위한 사이트입니다.">
 	<meta property="og:description" content="코로나 바이러스 현황판">
-	<meta property="og:image" content="https://livecorona.co.kr/livecorona.jpg">
+	<meta property="og:image" content="https://livecorona.co.kr/img/livecorona.jpg">
 	<meta property="og:url" content="https://livecorona.co.kr">
 
   <meta charset="utf-8">
@@ -513,7 +513,7 @@
                             </div>
                             <!-- Card Body -->
                             <div class="card-body">
-                              <img src="lancet.jpg" alt="Nowcasting and forecasting the potential domestic and
+                              <img src="img/lancet.jpg" alt="Nowcasting and forecasting the potential domestic and
             international spread of the 2019-nCoV outbreak originating
             in Wuhan, China: a modelling study" class="img-fluid">
                               <p style="margin-top:0.5rem;">
