--- a/index.html
+++ b/index.html
@@ -169,9 +169,11 @@
                 <div class="card-body">
                   <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">확진자 현황</div>
                   <h4 class="small font-weight-bold">한국(확진자 <span id="한국확진자"></span>명/사망자 1명)<span
-                      class="float-right">100%</span></h4>
+                      class="float-right">99.03%</span></h4>
                   <div class="progress mb-4">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="100"
+                      aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 1%" aria-valuenow="100"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <h4 class="small font-weight-bold">제주(확진자 0명/사망자 0명)<span class="float-right">0%</span></h4>
