--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                     <div class="progress-bar bg-danger" role="progressbar" style="width: 1%" aria-valuenow="100"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <h4 class="small font-weight-bold">제주(확진자 0명/사망자 0명)<span class="float-right">0%</span></h4>
+                  <h4 class="small font-weight-bold">제주(확진자 1명/사망자 0명)<span class="float-right">0.9%</span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 0%" aria-valuenow="0"
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 1%" aria-valuenow="0"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
