확진자 이동경로

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
               <div class="card shadow mb-12">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">중국 귀국후 확진판정자 이동경로</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">확진판정자 이동경로</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -554,14 +554,26 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <img class="img-fluid" src="img/jeju_info.png" alt="">
-                  <p>유동인구 / 중국 귀국후 확진판정자 이동경로(출처 : 제주도청)</p>
                   <p>
-                    21일 : 제주공항 입국 근처, 호텔에서 숙박<br>
-                    22일 : 삼굼부리, 우도, 성산일출봉<br>
-                    23일 : 신라면세점, 롯데면세점, 쇼핑거리, 칠성통 방문<br>
-                    24일 : 1100고지, 도두동 무지개 해안도로, 누웨마루 거리<br>
-                    25일 : 제주공항<br>
+                  ◆ 2월 18일(화)<br>
+                  <br>
+                  △ 20시21분경 : 대구발 제주행 비행기 탑승하여 제주에 도착<br>
+                  △ 20시35분경 : 제주공항 택시승차장서 개인택시 탑승<br>
+                  △ 20시54분경 : 제주공항 옆 해군부대 앞서 택시 하차 후 편의점 이용<br>
+                  △ 21시23분경 : 편의점서 도보로 군부대 복귀<br>
+                  <br>
+                  ◆ 2월 19일(수)<br>
+                  <br>
+                  △ 일과 전후 시간 : 군부대 내에서만 생활<br>
+                  <br>
+                  ◆ 2월 20일(목)<br>
+                  <br>
+                  △ 08시45분경 : 부대 구급차 이용 한라병원 선별진료소 방문<br>
+                  △ 09시41분경 : 선별진료소 검사실서 1차 검사 및 약처방 받음<br>
+                  △ 10시06분경 : 부대 구급차 이용 군부대로 복귀<br>
+                  △ 18시20분경 : 제주보건소 구급차로 제주대병원으로 이송<br>
+                  <br>
+                  출처 : 제주의소리(http://www.jejusori.net)<br>
                   </p>
                 </div>
               </div>
