제주 확진자 동선 수정

--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
+                  <p>휴가차 고향인 대구에 다녀왔다가 코로나19 양성 판정을 받은 군인의 동선</p>
                   <p>
                   ◆ 2월 18일(화)<br>
                   <br>
