WE 호텔 소식 업데이트

--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
                   <br>
                   출처 : 제주의소리(http://www.jejusori.net)<br>
                   </p>
+                  <p>서귀포 WE호텔 근무중 22세 여성은 1차 양성(22일 세벽 1시 45분)이며 이동경로와 질병관리본부의 최종 확진판정이 공개되는 대로 올려드리도록 하겠습니다.</p>
                 </div>
               </div>
             </div>
