--- a/index.html
+++ b/index.html
@@ -168,15 +168,15 @@
               <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
                   <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">확진자 현황</div>
-                  <h4 class="small font-weight-bold">한국(확진자 <span id="한국확진자"></span>명/사망자 1명)<span
-                      class="float-right">99.03%</span></h4>
+                  <h4 class="small font-weight-bold">한국(확진자 <span id="한국확진자"></span>명/사망자 <span id="한국사망자"></span>명)<span
+                      class="float-right"><span id="한국확진자_확률"></span>%</span></h4>
                   <div class="progress mb-4">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="100"
                       aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="progress-bar bg-danger" role="progressbar" style="width: 1%" aria-valuenow="100"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <h4 class="small font-weight-bold">제주(확진자 1명/사망자 0명)<span class="float-right">0.9%</span></h4>
+                  <h4 class="small font-weight-bold">제주(확진자 2명/사망자 0명)<span class="float-right">0.57%</span></h4>
                   <div class="progress mb-4">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 1%" aria-valuenow="0"
                       aria-valuemin="0" aria-valuemax="100"></div>
@@ -576,7 +576,6 @@
                   <br>
                   출처 : 제주의소리(http://www.jejusori.net)<br>
                   </p>
-                  <p>* 서귀포 WE호텔 근무중 22세 여성은 1차 양성(22일 새벽 1시 45분)이며 이동경로와 질병관리본부의 최종 확진판정이 공개되는 대로 올려드리도록 하겠습니다.</p>
                 </div>
               </div>
             </div>
@@ -1212,6 +1211,10 @@
     for (var variable in data) {
       if (data[variable]["Name"] == "한국") {
         document.getElementById("한국확진자").innerHTML = data[variable]["확진자수"];
+        document.getElementById("한국사망자").innerHTML = data[variable]["사망자수"];
+        var 확진자확률값 = (((data[variable]["확진자수"] - data[variable]["사망자수"]) / data[variable]["확진자수"]) * 100).toFixed(2);
+        document.getElementById("한국확진자_확률").innerHTML = 확진자확률값;
+
         document.getElementById("한국확진자_완치자카드").innerHTML = data[variable]["확진자수"];
         document.getElementById("한국완치자_인원").innerHTML = data[variable]["완치자수"];
         var 완치자확율값 = ((data[variable]["완치자수"] / data[variable]["확진자수"]) * 100).toFixed(2)
