두번째 확진자 동선

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <p>휴가차 고향인 대구에 다녀왔다가 코로나19 양성 판정을 받은 군인의 동선</p>
+                  <p>제주 첫번째 확진자(휴가차 고향인 대구에 다녀왔다가 코로나19 양성 판정을 받은 군인의 동선)</p>
                   <p>
                   ◆ 2월 18일(화)<br>
                   <br>
@@ -574,7 +574,73 @@
                   △ 10시06분경 : 부대 구급차 이용 군부대로 복귀<br>
                   △ 18시20분경 : 제주보건소 구급차로 제주대병원으로 이송<br>
                   <br>
-                  출처 : 제주의소리(http://www.jejusori.net)<br>
+                  </p>
+                  <p>제주 두번째 확진자(서귀포 WE호텔 근무 22세 여성)</p>
+                  <p>
+                    ◆ 2월16일 <br>
+
+                    △ 대구발 11:30분 아시아나로 제주 입도(상세내용 조사중)<br>
+                    △ 공항에서 버스로 직원 숙소로 이동
+                    (상세내용 조사중)<br>
+
+                    ◆ 2월17일<br>
+
+                    △ 09:00~17:00 서귀포 위호텔 근무
+                    (접촉 직원 자가격리 완료)<br>
+
+                    △ 22:00 숙소 인근 주점
+                    (주점 동행 일행 자가격리 완료)<br>
+
+                    ◆ 2월18일<br>
+
+                    △ 03:20 직원 기숙사 복귀
+                    증상 발현 이후 취침 및 휴무라 종일 기숙사 체류(당일 기숙사 체류인원 파악중)
+                    숙소에 함께 머문 사람은 어머니가 아닌 숙소 동료. 자가격리중<br>
+
+                    ◆ 2월19일<br>
+
+                    △ 13:00 셔틀버스 이용해 서귀포 위호텔 출근. 버스 동석 인원 50여명
+                    (셔틀버스 운영 중지. 기사 인적사항 파악 중. 셔틀버스 이용인원 명단 파악중)<br>
+
+                    △ 15:44 택시 이용해 중문신내과 도착
+                    (택시기사 1명 자가격리, 중문신내과 임시폐쇄 및 의사·간호사 자가격리)<br>
+
+                    △ 16:02 202번 버스 타고 서귀포 방향 이동
+                    (버스 운영정지 및 버스기사 자가격리. 버스 탑승승객 명단 파악 중)<br>
+
+                    △ 16:30
+                    서귀포 열린병원 방문
+                    (민원실 임시폐쇄 및 병원 전체 소독. 접촉 병원직원 3명 자가격리)<br>
+
+                    △ 버스 510번 이용해 숙소로 이동
+                    (버스기사 및 승객 5명 내외 명단 파악 및 자가격리)<br>
+
+                    △ 17:00
+                    직원 기숙사 도착
+                    (전체 소독 및 해당 확진자 방 임시폐쇄. 당일 기숙사 체류인원 파악중)<br>
+
+                    ◆ 2월20일<br>
+
+                    △ 13:30 버스 이용 서귀포 이마트로 이동
+                    (버스 번호 · 기사 명단 및 탑승 승객 명단 파악중. 자가격리 조치예정)<br>
+
+                    △ 14:00 서귀포 이마트 이용 30분간 체류
+                    (마스크 착용 및 셀프 계산대 이용. 마스크 사용 접촉자 없음. 이마트 임시폐쇄 및 방역실시)<br>
+
+                    △ 버스이용 숙소 이동
+                    (버스 번호 · 기사 명단 및 탑승 승객 명단 파악중)<br>
+
+                    △ 16:58 CU 오네뜨점 이용. 점원 1명. 손님 없었음<br>
+
+                    △ 기숙사로 이동<br>
+
+                    ◆ 2월21일
+
+                    △ 12:30 버스 182번 이용 서귀포 열린병원 이동<br>
+
+                    △ 택시 이용해 기숙사로 이동<br>
+
+                    출처 : 제주의소리(http://www.jejusori.net)<br>
                   </p>
                 </div>
               </div>
