1차 양성반응자

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                   <br>
                   출처 : 제주의소리(http://www.jejusori.net)<br>
                   </p>
-                  <p>* 2번째 확진자(서귀포 WE호텔근무여성)</p>
+                  <p>* 1차 양성반응(서귀포 WE호텔근무여성)</p>
                   <p>
                     ◆ 2월16일 <br>
                     △ 대구발 11:30분 아시아나로 제주 입도(상세내용 조사중)<br>
@@ -597,7 +597,7 @@
                     △ 13:00 셔틀버스 이용해 서귀포 위호텔 출근. 버스 동석 인원 50여명
                     (셔틀버스 운영 중지. 기사 인적사항 파악 중. 셔틀버스 이용인원 명단 파악중)<br>
 
-                    △ 15:44 택시 이용해 중문신내과 도착 
+                    △ 15:44 택시 이용해 중문신내과 도착
                     (택시기사 1명 자가격리, 중문신내과 임시폐쇄 및 의사·간호사 자가격리)<br>
 
                     △ 16:02 202번 버스 타고 서귀포 방향 이동
