제주도청 요청사항 반영

--- a/index.html
+++ b/index.html
@@ -571,71 +571,35 @@
                   △ 10시06분경 : 부대 구급차 이용 군부대로 복귀<br>
                   △ 18시20분경 : 제주보건소 구급차로 제주대병원으로 이송<br>
                   <br>
-                  출처 : 제주의소리(http://www.jejusori.net)<br>
+                  출처 : <a href="http://www.jejusori.net">제주의소리</a><br>
                   </p>
                   <p>* 1차 양성반응(서귀포 WE호텔근무여성)</p>
                   <p>
-                    ◆ 2월16일 <br>
-                    △ 대구발 11:30분 아시아나로 제주 입도(상세내용 조사중)<br>
-                    △ 공항에서 버스로 직원 숙소로 이동
-                    (상세내용 조사중)<br><br>
+                    ■ 제주특별자치도는 도내 두 번째 코로나19 양성 반응자의 동선과 관련해 CCTV와 버스카드 이용 내역을 추가로 확인하고, 탑승한 버스 노선에 대한 정보를 추가로 공개했다.<br>
+                    ■ 대구 출신으로 서귀포 WE호텔 근무했던 22세 여성 A씨는 2월 16일 대구발 12시 10분 아시아나를 타고 제주에 입도했다.<br>
+                    ❍ A씨는 오후 1시 10분경 제주국제공항 버스 정류소에서 182번 삼화여객을 타고 서귀포로 이동해 14시 6분 중문 우체국 버스정류장에 하차했다.<br>
+                    ❍ 이후 도보로 이동해 CU제주중문점을 방문했다.<br>
+                    ■ 제주 방문 다음날인 17일에는 오후 5시까지 근무를 한 것으로 진술하고 있다.<br>
+                    ❍ 현재 A씨가 근무한 호텔은 임시 휴관조치가 내려졌으며, 접촉했던 직원은 자가 격리가 조치됐다.<br>
+                    ❍ 퇴근 이후 A씨의 행방에 대해서는 역학 조사가 진행 중이다.<br>
+                    ■ 19일에는 회사 셔틀 버스를 이용함에 따라 셔틀버스 운영 중지와 소독조치가 이뤄졌으며, 셔틀버스 이용자 명단은 현재 파악 중이다.<br>
+                    ■ 특히 A씨는 19일부터 마스크를 지속적으로 쓰고 다닌 것이 CCTV상에서 확인됐다.<br>
+                    ❍ A씨는 이날 호텔근무 이후 15시 43분 중문동사거리에서 개인택시를 하차한 것이 CCTV로 확인됐으며, 이후 중문 신내과를 찾았다.<br>
+                    ❍ 중문 방문 이후인 16시 2분에서 6분까지는 중문환승정류장(중문 우체국) 버스정류소에서 버스를 기다리고 있었다.<br>
+                    ❍ 이어 A씨는 16시 6분 202번 버스를 타고 착석한 뒤 16시 29분 서귀포시 (구)버스터미널에서 하차했다.<br>
+                    ■ 20일에는 버스를 이용해 서귀포 이마트로 이동한 것이 확인됐다.<br>
+                    ❍ A씨는 이날 12시 40분 중문우체국 맞은편 버스정류소에서 대기하다 12시 41분 182번 삼화여객을 이용해 12시 52분 월드컵경기장서귀포버스터미널 정류소에서 하차했다.<br>
+                    ■ 또한 21일 서귀포열린 병원을 가는 동안 탑승한 버스 정보도 CCTV에 나타났다.<br>
+                    ❍ A씨는 이날 낮 12시 41분 중문 우체국 버스정류소에서 182번 삼화여객을 탄 뒤 13시 8분 중앙로터리(동) 정류장에 하차한 후 서귀포 열린 병원을 찾은 것으로 파악하고 있다.<br>
+                    ■ 도는 두 번째 코로나19 양성 반응자가 탑승했던 버스차량들은 운행중지 후 소독 조치를 취했으며, 운수종사자들은 모두 격리 조치됐다.<br>
+                    ❍ 또한 해당 노선은 다른 예비차량을 투입해 정상 운행 중이다.<br>
+                    ■ 제주도는 해당 병원의 의뢰로 제주보건환경연구원이 검사를 실시한 결과 22일 오전 1시 45분 1차 양성반응이 나옴에 따라 질병관리본부에 최종 검사를 의뢰했다.<br>
+                    ❍ A씨는 제주대학교병원 음압병실에 이송돼 현재 격리 치료 중이다.<br>
+                    ■ 현재 도는 동선을 바탕으로 접촉자를 면밀히 파악하고 있으며, 버스카드 이용 내역과 현재까지 파악된 동선의 내용을 참고해의심 증세가 있으면 질병관리본부 콜센터(국번없이 1339)나 관할 보건소로 연락해주기를 당부했다.<br>
+                    ❍ 아울러 도는 양성반응자가 이용했던 같은 시간대 버스와 동승한 사람들이 증상 발현 시 반드시 지정된 선별진료소를 찾아주고 스스로 자가 관리할 수 있도록 협조를 요청했다.<br>
+                    <br><br>
 
-                    ◆ 2월17일<br>
-                    △ 09:00~17:00 서귀포 위호텔 근무
-                    (접촉 직원 자가격리 완료)<br>
-                    △ 22:00 숙소 인근 주점
-                    (주점 동행 일행 자가격리 완료)<br><br>
-
-                    ◆ 2월18일<br>
-
-                    △ 03:20 직원 기숙사 복귀
-                    증상 발현 이후 취침 및 휴무라 종일 기숙사 체류(당일 기숙사 체류인원 파악중)
-                    숙소에 함께 머문 사람은 어머니가 아닌 숙소 동료. 자가격리중<br><br>
-
-                    ◆ 2월19일<br>
-
-                    △ 13:00 셔틀버스 이용해 서귀포 위호텔 출근. 버스 동석 인원 50여명
-                    (셔틀버스 운영 중지. 기사 인적사항 파악 중. 셔틀버스 이용인원 명단 파악중)<br>
-
-                    △ 15:44 택시 이용해 중문신내과 도착
-                    (택시기사 1명 자가격리, 중문신내과 임시폐쇄 및 의사·간호사 자가격리)<br>
-
-                    △ 16:02 202번 버스 타고 서귀포 방향 이동
-                    (버스 운영정지 및 버스기사 자가격리. 버스 탑승승객 명단 파악 중)<br>
-
-                    △ 16:30
-                    서귀포 열린병원 방문
-                    (민원실 임시폐쇄 및 병원 전체 소독. 접촉 병원직원 3명 자가격리)<br>
-
-                    △ 버스 510번 이용해 숙소로 이동
-                    (버스기사 및 승객 5명 내외 명단 파악 및 자가격리)<br>
-
-                    △ 17:00
-                    직원 기숙사 도착
-                    (전체 소독 및 해당 확진자 방 임시폐쇄. 당일 기숙사 체류인원 파악중)<br><br>
-
-                    ◆ 2월20일<br>
-
-                    △ 13:30 버스 이용 서귀포 이마트로 이동
-                    (버스 번호 · 기사 명단 및 탑승 승객 명단 파악중. 자가격리 조치예정)<br>
-
-                    △ 14:00 서귀포 이마트 이용 30분간 체류
-                    (마스크 착용 및 셀프 계산대 이용. 마스크 사용 접촉자 없음. 이마트 임시폐쇄 및 방역실시)<br>
-
-                    △ 버스이용 숙소 이동
-                    (버스 번호 · 기사 명단 및 탑승 승객 명단 파악중)<br>
-
-                    △ 16:58 CU 오네뜨점 이용. 점원 1명. 손님 없었음<br>
-
-                    △ 기숙사로 이동<br><br>
-
-                    ◆ 2월21일
-
-                    △ 12:30 버스 182번 이용 서귀포 열린병원 이동<br>
-
-                    △ 택시 이용해 기숙사로 이동<br><br>
-
-                    출처 : 제주의소리(http://www.jejusori.net)<br>
+                    출처 : <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
                   </p>
                 </div>
               </div>
