도청 데이터 업로드

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <p>* 첫번째 확진자(휴가차 고향인 대구에 다녀왔다가 코로나19 양성 판정을 받은 군인의 동선)</p>
+                  <h2>첫번째 확진자(휴가차 고향인 대구에 다녀왔다가 코로나19 양성 판정을 받은 군인의 동선)</h2>
                   <p>
                   ◆ 2월 18일(화)<br>
                   △ 20시21분경 : 대구발 제주행 비행기 탑승하여 제주에 도착<br>
@@ -571,9 +571,9 @@
                   △ 10시06분경 : 부대 구급차 이용 군부대로 복귀<br>
                   △ 18시20분경 : 제주보건소 구급차로 제주대병원으로 이송<br>
                   <br>
-                  출처 : <a href="http://www.jejusori.net">제주의소리</a><br>
+                  출처 : <a href="http://www.jejusori.net">제주의소리</a><br><br>
                   </p>
-                  <p>* 1차 양성반응(서귀포 WE호텔근무여성)</p>
+                  <h2>두번째 확진자(서귀포 WE호텔근무여성)</h2>
                   <p>
                     ■ 제주특별자치도는 도내 두 번째 코로나19 양성 반응자의 동선과 관련해 CCTV와 버스카드 이용 내역을 추가로 확인하고, 탑승한 버스 노선에 대한 정보를 추가로 공개했다.<br>
                     ■ 대구 출신으로 서귀포 WE호텔 근무했던 22세 여성 A씨는 2월 16일 대구발 12시 10분 아시아나를 타고 제주에 입도했다.<br>
@@ -595,11 +595,25 @@
                     ❍ 또한 해당 노선은 다른 예비차량을 투입해 정상 운행 중이다.<br>
                     ■ 제주도는 해당 병원의 의뢰로 제주보건환경연구원이 검사를 실시한 결과 22일 오전 1시 45분 1차 양성반응이 나옴에 따라 질병관리본부에 최종 검사를 의뢰했다.<br>
                     ❍ A씨는 제주대학교병원 음압병실에 이송돼 현재 격리 치료 중이다.<br>
-                    ■ 현재 도는 동선을 바탕으로 접촉자를 면밀히 파악하고 있으며, 버스카드 이용 내역과 현재까지 파악된 동선의 내용을 참고해의심 증세가 있으면 질병관리본부 콜센터(국번없이 1339)나 관할 보건소로 연락해주기를 당부했다.<br>
-                    ❍ 아울러 도는 양성반응자가 이용했던 같은 시간대 버스와 동승한 사람들이 증상 발현 시 반드시 지정된 선별진료소를 찾아주고 스스로 자가 관리할 수 있도록 협조를 요청했다.<br>
-                    <br><br>
+                    <br>
 
                     출처 : <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
+                    * 해당 양성반응자는 2월 22일 확진 판정<br><br><br>
+
+                    <h3>이스라엘 성시순례 다녀온 도민 확인, 모니터링 착수</h3>
+                    ■ 제주특별자치도가 22일 이스라엘 성지순례를 다녀온 제주도민을 확인하고 모니터링에 착수했다.<br>
+                    ■ 도는 경북북부권 천주교 신도 이스라엘 성지순례단 참가자 일부가 코로나19 확진 판정을 받음에 따라 제주도민 참가 여부를 파악하다가 이 사실을 확인했다고 밝혔다.<br>
+                    ○ 종교계 관계자에 따르면, 이스라엘 성지순례에 참가한 도민은 총 37명이며, 지난 11일부터 21일까지 10박11일 일정으로 현지를 방문했다.<br>
+                    ■ 이들은 코로나19 확진자들이 일부 확인된 경북북부권 성지순례단과 별도로 이스라엘을 방문한 것으로 확인됐다.<br>
+                    ○ 경북북부권 성지순례단에는 도민이 포함되지 않는 것으로 조사됐다.<br>
+                    ■ 이들 중 1명은 기침 증상을 보여 22일 제주대학교병원에서 코로라19 진단 검사를 받았다. 결과는 내일(23일) 나오는 것으로 알려졌다.<br>
+                    ■ 또 다른 1명은 증상은 없으나 23일 한라병원에 코로나19 진단검사를 예약한 것으로 확인됐다.<br>
+                    ■ 성지순례 도민 참가자 모두는 현재 성당 측의 권고에 따라 자택 자가 격리 조치하고 있는 것으로 파악됐다.<br>
+                    ■ 도는 통상적 잠복기(14일)가 끝날 때까지 이들을 지속 모니터링하는 한편, 재난대책본부 차원에서 적극 대응해 나갈 방침이다.<br>
+                    ■ 또 도는 도내 종교시설에서 확진자가 발생하지 않도록 관리에 철저를 기할 것을 당부하는 한편, 자가 격리자들에게는 자가격리 중 개인수칙 철저하게 준수해달라고 권고할 방침이다.<br>
+
+                    출처 : <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
+
                   </p>
                 </div>
               </div>
