확진환자 한국 포함 글귀 삭제

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">확진환자(한국포함)</div>
+                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">확진환자</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800"><span id="확진자수"></span> 명</div>
                       <br>
                       <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">발생국가</div>
