--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <iframe src="https://dj.kbs.co.kr/resources/2020-02-03/" width="100%" height="800rem"></iframe>
+                  <iframe src="https://dj.kbs.co.kr/resources/2020-02-03/" width="100%" height="800rem" sandbox="allow-scripts"></iframe>
                 </div>
               </div>
             </div>
