상세현황 ui 수정

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     .status-now .card-body{
       padding:2.4rem 0 2.25rem;
     }
+    .status-detail .card-body .progress{
+      width:100%;
+    }
   </style>
 
 </head>
@@ -107,7 +110,7 @@
 <!-- Page Heading -->
 
 <header class="d-flex flex-column">
-  <div class="row" style="margin-top:2em;margin-left:2em;">
+  <div class="row" style="padding:2em;">
     <img src='img/live.svg' style="width: 22px;height: 22px;align-self: bottom;">&nbsp;
     <h1 class="title" style="vertical-align: middle;"> 라이브 코로나 맵&nbsp;</h1>
     <h6 style="align-self: flex-end;" class="h6"><span class="text-update"></span> 최종 업데이트(일일 오전과 오후 질병관리본부 브리핑 자료를 근거로 업데이트)</h6>
@@ -158,7 +161,7 @@
 
 
             <!-- 상세현황 -->
-            <div class="col-xl-4 col-lg-7">
+            <div class="col-xl-4 col-lg-7 status-detail">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
