Add meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta property="og:type" content="website">
 	<meta property="og:title" content="코로나 바이러스 현황판">
-	<meta name="description" content="질병관리본부의 DATA 근거하여, 신종 코로나 바이러스 감염증에 대한 정보를 신속하게 전달하기 위한 사이트입니다.">
+  <meta name="description" content="질병관리본부의 데이터에 근거하여 신종 코로나 바이러스 감염증에 대한 정보, 안내 및 확산 지도를 신속하게 전달합니다.">
+  <meta name="keywords" content="코로나19, 코로나바이러스, 코로나, 코로나맵, 코로나지도, 코로나 지도, 코로나 현황판, 확진자"/>
 	<meta property="og:description" content="코로나 바이러스 현황판">
 	<meta property="og:image" content="https://livecorona.co.kr/img/livecorona.jpg">
 	<meta property="og:url" content="https://livecorona.co.kr">
