--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1391,7 +1391,7 @@
       zoom: 7
   };
 
-  var koreaMap = new naver.maps.Map('koreaMap', mapOptions);
+  var map = new naver.maps.Map('koreaMap', mapOptions);
   </script>
 
 
