--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1387,8 +1387,8 @@
   <!-- koreaMap -->
   <script>
   var mapOptions = {
-      center: new naver.maps.LatLng(37.3595704, 127.105399),
-      zoom: 5
+      center: new naver.maps.LatLng(36.3732178,127.3187604),
+      zoom: 6
   };
 
   var map = new naver.maps.Map('koreaMap', mapOptions);
