--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1407,12 +1407,12 @@
           content: contentString,
           maxWidth: 140,
           backgroundColor: "#ffffff",
-          borderColor: "#ffffff",
+          borderColor: "#000",
           borderWidth: 3,
-          anchorSize: new naver.maps.Size(30, 30),
+          anchorSize: new naver.maps.Size(50, 30),
           anchorSkew: true,
           anchorColor: "#ffffff",
-          pixelOffset: new naver.maps.Point(20, -20)
+          pixelOffset: new naver.maps.Point(10, -10)
       });
       var marker = new naver.maps.Marker({
           map:map, position:point
