--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1397,7 +1397,7 @@
       var point = new naver.maps.LatLng(lat, lng);
       var contentString = [
           '<div class="iw_inner">',
-          '<p style="font-size: small; margin:2px;">국가이름 : ',countryName,'<br>',
+          '<p style="font-size: small; margin:10px;">국가이름 : ',countryName,'<br>',
           '확진자수 : ',confirmed,'<br>',
           '사망자수 :',death,'<br>',
           '</p>',
@@ -1412,7 +1412,7 @@
           anchorSize: new naver.maps.Size(50, 30),
           anchorSkew: true,
           anchorColor: "#ffffff",
-          pixelOffset: new naver.maps.Point(10, -10)
+          // pixelOffset: new naver.maps.Point(10, -10)
       });
       var marker = new naver.maps.Marker({
           map:map, position:point
