--- a/index.html
+++ b/index.html
@@ -1368,6 +1368,13 @@
 
   <!-- 월드맵 관련 스크립트  -->
   <script src="js/worldmap.js"></script>
+
+  <!-- 5분마다 사이트 새로고침 -->
+  <script>
+    setInterval(function() {
+      window.location.reload();
+    }, 5 * (1000 * 60));
+  </script>
 </body>
 
 </html>
