--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1397,7 +1397,7 @@
       var point = new naver.maps.LatLng(lat, lng);
       var contentString = [
           '<div class="iw_inner">',
-          '<p style="font-size: small; margin:10px;">국가이름 : ',countryName,'<br>',
+          '<p style="font-size: small; margin:10px;">지역이름 : ',countryName,'<br>',
           '확진자수 : ',confirmed,'<br>',
           '사망자수 :',death,'<br>',
           '</p>',
@@ -1435,7 +1435,8 @@
       infowindow.open(map, marker);
   }//국가별 감염자 마커
 
-  makePoint(37.5456299, 126.9540667, '대한민국', 15, 0);//테스트용
+  makePoint(37.5456299, 126.9540667, '서울', 300, 0);//테스트용
+  makePoint(35.8797296, 128.4964883, '대구', 600, 0);//테스트용
   </script>
 
 
