--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1393,18 +1393,19 @@
 
   var map = new naver.maps.Map('koreaMap', mapOptions);
 
-  지역이름 = ['서울', '대구', '인천', '경기']
-  지역좌표 = [
+  var 지역이름 = ['서울', '대구', '인천', '경기', '세종'];
+  var 지역좌표 = [
     [37.5456299, 126.9540667],
     [35.8797296, 128.4964883],
     [37.4647398, 126.5342672],
     [37.5951951, 125.9748524],
-  ]
-  지역별확진자 = [40, 543, 2, 42]
+    [37.5845928, 125.9748356],
+  ];
+  var 지역별확진자 = [40, 543, 2, 42, 1];
   for(let i in 지역이름) {
-      console.log(i)
-      console.log(지역좌표[i][0], 지역좌표[i][1])
-      console.log(지역이름[i], 지역별확진자[i], 지역별사망자[i])
+      console.log(i);
+      console.log(지역좌표[i][0], 지역좌표[i][1]);
+      console.log(지역이름[i], 지역별확진자[i], 지역별사망자[i]);
 
 
       var point = new naver.maps.LatLng(지역좌표[i][0], 지역좌표[i][1]);
