--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1393,19 +1393,29 @@
 
   var map = new naver.maps.Map('koreaMap', mapOptions);
 
-  var 지역이름 = ['서울', '대구', '인천', '경기', '세종'];
+  var 지역이름 = ['서울', '대구', '인천', '경기', '세종', '대전', '충남'];
   var 지역좌표 = [
-    [37.5456299, 126.9540667],
-    [35.8797296, 128.4964883],
-    [37.4647398, 126.5342672],
-    [37.5951951, 125.9748524],
-    [37.5845928, 125.9748356],
+    [37.5456299, 126.9540667],//서울
+    [35.8797296, 128.4964883],//대구
+    [37.4647398, 126.5342672],//인천
+    [37.5951951, 125.9748524],//경기
+    [37.5845928, 125.9748356],//세종
+    [36.3730795, 127.3185888],//대전
+    [36.5360291, 126.2320455],//충남
   ];
-  var 지역별확진자 = [40, 543, 2, 42, 1];
+  var 지역별확진자 = [
+    40, //서울
+    543, //대구
+    2, //인천
+    42, //경기
+    1, //세종
+    3, //대전
+    2, //충남
+  ];
   for(let i in 지역이름) {
       console.log(i);
       console.log(지역좌표[i][0], 지역좌표[i][1]);
-      console.log(지역이름[i], 지역별확진자[i], 지역별사망자[i]);
+      console.log(지역이름[i], 지역별확진자[i]);
 
 
       var point = new naver.maps.LatLng(지역좌표[i][0], 지역좌표[i][1]);
