--- a/index_naver_map_test.html
+++ b/index_naver_map_test.html
@@ -1393,24 +1393,44 @@
 
   var map = new naver.maps.Map('koreaMap', mapOptions);
 
-  var 지역이름 = ['서울', '대구', '인천', '경기', '세종', '대전', '충남'];
+  var 지역이름 = ['서울', '인천', '경기', '세종', '대전', '충남', '전북', '광주', '전남', '강원', '충북', '경북', '대구', '경남', '울산', '부산', '제주'];
   var 지역좌표 = [
     [37.5456299, 126.9540667],//서울
-    [35.8797296, 128.4964883],//대구
     [37.4647398, 126.5342672],//인천
     [37.5951951, 125.9748524],//경기
     [37.5845928, 125.9748356],//세종
     [36.3730795, 127.3185888],//대전
     [36.5360291, 126.2320455],//충남
+    [35.7246404, 125.811699], //전북
+    [35.1768202, 126.7737603],//광주
+    [34.6932579, 125.3769388],//전남
+    [37.8633734, 127.1267051],//강원
+    [36.6371935, 127.406481],//충북
+    [36.5430631, 127.602632],//경북
+    [35.8798688, 128.4966603],//대구
+    [35.1786341, 127.2699717],//경남
+    [35.5622483, 129.211417],//울산
+    [35.1646501, 128.931717],//부산
+    [33.3617007, 126.511657],//제주
   ];
   var 지역별확진자 = [
     40, //서울
-    543, //대구
     2, //인천
     42, //경기
     1, //세종
     3, //대전
     2, //충남
+    3, //전북
+    9, //광주
+    2, //전남
+    6, //강원
+    5, //충북
+    248, //경북
+    543, //대구
+    23, //경남
+    3, //울산
+    43, //부산
+    2, //제주
   ];
   for(let i in 지역이름) {
       console.log(i);
@@ -1448,16 +1468,15 @@
           fillColor: "#ff0000",
           fillOpacity: 0.7
       });
-      naver.maps.Event.addListener(marker, "click", function(e) {
-          if (infowindow.getMap()) {
-              infowindow.close();
-          } else {
-              infowindow.open(map, marker);
-          }
-      });
-      infowindow.open(map, marker);
   }//국가별 감염자 마커
-
+  naver.maps.Event.addListener(marker, "click", function(e) {
+      if (infowindow.getMap()) {
+          infowindow.close();
+      } else {
+          infowindow.open(map, marker);
+      }
+  });
+  infowindow.open(map, marker);
   </script>
 
 
